fix: bump JS version to bust cache

--- a/public/support-dashboard.html
+++ b/public/support-dashboard.html
@@ -677,7 +677,7 @@
     <script src="js/shared/utils.js?v=20260126"></script>
     <script src="js/shared/toast.js?v=20260126"></script>
     <script src="js/shared/modal.js?v=20260126"></script>
-    <script src="js/support-dashboard.js?v=20260126g"></script>
+    <script src="js/support-dashboard.js?v=20260126h"></script>
 </body>
 
 </html>
