--- a/public/support-dashboard.html
+++ b/public/support-dashboard.html
@@ -14,19 +14,25 @@
         /* Customer Resolution Center Specific Styles */
         .resolution-layout {
             display: grid;
-            grid-template-columns: 320px 1fr 300px;
-            gap: 16px;
+            grid-template-columns: 280px 300px 1fr 280px;
+            gap: 12px;
             height: calc(100vh - 140px);
             padding: 16px;
         }
 
-        @media (max-width: 1200px) {
+        @media (max-width: 1400px) {
             .resolution-layout {
-                grid-template-columns: 280px 1fr;
+                grid-template-columns: 260px 280px 1fr;
             }
 
             .actions-panel {
                 display: none;
+            }
+        }
+
+        @media (max-width: 1000px) {
+            .resolution-layout {
+                grid-template-columns: 1fr;
             }
         }
 
@@ -432,6 +438,235 @@
         .empty-state-center p {
             font-size: 14px;
         }
+
+        /* Ticket Cards */
+        .ticket-card {
+            background: var(--bg-secondary);
+            border-radius: 10px;
+            padding: 12px;
+            margin-bottom: 10px;
+            border-left: 4px solid var(--border);
+            cursor: pointer;
+            transition: all 0.2s;
+        }
+
+        .ticket-card:hover {
+            transform: translateX(4px);
+        }
+
+        .ticket-card.open {
+            border-left-color: #f59e0b;
+        }
+
+        .ticket-card.in_progress {
+            border-left-color: #3b82f6;
+        }
+
+        .ticket-card.resolved {
+            border-left-color: #10b981;
+        }
+
+        .ticket-header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin-bottom: 6px;
+        }
+
+        .ticket-subject {
+            font-weight: 600;
+            font-size: 13px;
+            color: var(--text-primary);
+        }
+
+        .sla-breach {
+            background: #ef4444;
+            color: white;
+            font-size: 10px;
+            padding: 2px 6px;
+            border-radius: 4px;
+            font-weight: 600;
+        }
+
+        .ticket-meta {
+            display: flex;
+            gap: 8px;
+            align-items: center;
+            margin-bottom: 6px;
+        }
+
+        .ticket-status {
+            font-size: 10px;
+            padding: 2px 6px;
+            border-radius: 4px;
+            color: white;
+            font-weight: 600;
+        }
+
+        .ticket-order {
+            font-size: 10px;
+            color: var(--primary);
+            font-weight: 600;
+        }
+
+        .ticket-msgs {
+            font-size: 10px;
+            color: var(--text-muted);
+        }
+
+        .ticket-preview {
+            font-size: 12px;
+            color: var(--text-secondary);
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+        }
+
+        .ticket-time {
+            font-size: 10px;
+            color: var(--text-muted);
+            margin-top: 4px;
+        }
+
+        /* Chat Panel */
+        #chatPanel {
+            position: fixed;
+            right: -400px;
+            top: 0;
+            width: 380px;
+            height: 100vh;
+            background: var(--bg-primary);
+            border-left: 1px solid var(--border);
+            transition: right 0.3s;
+            z-index: 100;
+            display: flex;
+            flex-direction: column;
+        }
+
+        #chatPanel.active {
+            right: 0;
+        }
+
+        .chat-header {
+            padding: 16px;
+            background: var(--bg-secondary);
+            border-bottom: 1px solid var(--border);
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+
+        .chat-header h3 {
+            font-size: 14px;
+            font-weight: 700;
+            margin: 0;
+        }
+
+        .chat-close {
+            background: none;
+            border: none;
+            font-size: 20px;
+            cursor: pointer;
+            color: var(--text-muted);
+        }
+
+        #chatMessages {
+            flex: 1;
+            overflow-y: auto;
+            padding: 16px;
+            display: flex;
+            flex-direction: column;
+            gap: 12px;
+        }
+
+        .chat-message {
+            max-width: 85%;
+        }
+
+        .chat-message.customer {
+            align-self: flex-start;
+        }
+
+        .chat-message.agent {
+            align-self: flex-end;
+        }
+
+        .chat-bubble {
+            padding: 10px 14px;
+            border-radius: 12px;
+            font-size: 13px;
+        }
+
+        .chat-message.customer .chat-bubble {
+            background: var(--bg-secondary);
+            color: var(--text-primary);
+        }
+
+        .chat-message.agent .chat-bubble {
+            background: var(--primary);
+            color: white;
+        }
+
+        .chat-meta {
+            font-size: 10px;
+            color: var(--text-muted);
+            margin-top: 4px;
+        }
+
+        .chat-input-area {
+            padding: 12px;
+            border-top: 1px solid var(--border);
+            display: flex;
+            gap: 8px;
+        }
+
+        .chat-input-area input {
+            flex: 1;
+            padding: 10px 14px;
+            border: 1px solid var(--border);
+            border-radius: 20px;
+            font-size: 13px;
+            background: var(--bg-secondary);
+            color: var(--text-primary);
+        }
+
+        .chat-input-area button {
+            background: var(--primary);
+            color: white;
+            border: none;
+            padding: 10px 16px;
+            border-radius: 20px;
+            cursor: pointer;
+            font-weight: 600;
+        }
+
+        .empty-state-mini {
+            text-align: center;
+            padding: 20px;
+            color: var(--text-muted);
+        }
+
+        .empty-state-mini i {
+            font-size: 24px;
+            opacity: 0.4;
+            margin-bottom: 8px;
+            display: block;
+        }
+
+        .empty-state-mini p {
+            font-size: 12px;
+            margin-bottom: 10px;
+        }
+
+        .btn-sm {
+            padding: 6px 12px;
+            font-size: 11px;
+            background: var(--primary);
+            color: white;
+            border: none;
+            border-radius: 6px;
+            cursor: pointer;
+        }
     </style>
     <script>
         window.toggleSidebar = function () {
@@ -555,7 +790,20 @@
                         </div>
                     </div>
 
-                    <!-- Panel 2: Orders & Issues -->
+                    <!-- Panel 2: Support Tickets -->
+                    <div class="panel">
+                        <div class="panel-header">
+                            <div class="panel-title"><i class="bi bi-chat-dots"></i> Support Tickets</div>
+                        </div>
+                        <div class="panel-content" id="ticketsPanel">
+                            <div class="empty-state-center">
+                                <i class="bi bi-chat-square-text"></i>
+                                <p>Select a customer to view tickets</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Panel 3: Orders & Issues -->
                     <div class="panel">
                         <div class="panel-header">
                             <div class="panel-title"><i class="bi bi-box-seam"></i> Orders & Issues</div>
@@ -668,6 +916,20 @@
                 </div>
             </section>
         </main>
+    </div>
+
+    <!-- Sliding Chat Panel (Phase 2) -->
+    <div id="chatPanel">
+        <div class="chat-header">
+            <h3><i class="bi bi-chat-left-text"></i> Ticket Chat</h3>
+            <button class="chat-close" onclick="closeChat()">×</button>
+        </div>
+        <div id="chatMessages"></div>
+        <div class="chat-input-area">
+            <input type="text" id="chatInput" placeholder="Type a message..."
+                onkeydown="if(event.key==='Enter') sendTicketMessage()">
+            <button onclick="sendTicketMessage()">Send</button>
+        </div>
     </div>
 
     <!-- Toast Container -->
