--- a/public/finance-dashboard.html
+++ b/public/finance-dashboard.html
@@ -300,8 +300,42 @@
                 <div class="page-header">
                     <h1 class="page-title"><i class="bi bi-clock-history"></i> Pending Payouts</h1>
                     <div style="color: var(--text-secondary); font-size: 14px;">
-                        <i class="bi bi-info-circle"></i> Each payment requires individual reference and notes for
-                        compliance
+                        <i class="bi bi-info-circle"></i> Use batch payment to process multiple payouts efficiently
+                    </div>
+                </div>
+
+                <!-- Batch Payment Toolbar -->
+                <div class="content-card" style="margin-bottom: 16px; padding: 16px;">
+                    <div
+                        style="display: flex; justify-content: space-between; align-items: center; flex-wrap: wrap; gap: 12px;">
+                        <!-- Garage Filter -->
+                        <div style="display: flex; gap: 12px; align-items: center;">
+                            <label style="font-weight: 500; color: var(--text-primary);">Filter by Garage:</label>
+                            <select id="garageFilter" class="form-select"
+                                style="min-width: 220px; padding: 8px 12px; border-radius: 8px; border: 1px solid var(--border);">
+                                <option value="">All Garages</option>
+                            </select>
+                            <button class="btn btn-secondary" onclick="applyGarageFilter()" style="padding: 8px 16px;">
+                                <i class="bi bi-funnel"></i> Apply
+                            </button>
+                            <button class="btn btn-ghost" onclick="clearGarageFilter()" style="padding: 8px 12px;"
+                                title="Clear filter">
+                                <i class="bi bi-x-circle"></i>
+                            </button>
+                        </div>
+
+                        <!-- Batch Actions -->
+                        <div style="display: flex; gap: 8px; align-items: center;">
+                            <span id="pendingTotalInfo"
+                                style="color: var(--text-secondary); font-size: 14px; margin-right: 8px;">
+                                <strong id="pendingCountDisplay">0</strong> payouts • <strong
+                                    id="pendingAmountDisplay">0 QAR</strong>
+                            </span>
+                            <button class="btn btn-primary" onclick="openBatchPaymentFlow()" id="btnBatchSend"
+                                style="padding: 10px 20px; font-weight: 600;">
+                                <i class="bi bi-send-fill"></i> Send All Filtered
+                            </button>
+                        </div>
                     </div>
                 </div>
 
@@ -309,6 +343,10 @@
                     <table class="data-table">
                         <thead>
                             <tr>
+                                <th style="width: 40px;">
+                                    <input type="checkbox" id="selectAllPending" onchange="toggleSelectAllPending()"
+                                        title="Select all visible payouts">
+                                </th>
                                 <th>Garage</th>
                                 <th>Order #</th>
                                 <th>Part Amount</th>
@@ -320,7 +358,7 @@
                         </thead>
                         <tbody id="pendingPayoutsTable">
                             <tr>
-                                <td colspan="7" class="empty-state">Loading...</td>
+                                <td colspan="8" class="empty-state">Loading...</td>
                             </tr>
                         </tbody>
                     </table>
@@ -592,6 +630,79 @@
                 <button class="btn btn-ghost" onclick="closeSendPaymentModal()">Cancel</button>
                 <button class="btn btn-success" onclick="submitSendPayment()">
                     <i class="bi bi-send-check"></i> Mark as Sent
+                </button>
+            </div>
+        </div>
+    </div>
+
+    <!-- Batch Payment Modal -->
+    <div class="modal-overlay" id="batchPaymentModal" style="display: none;">
+        <div class="modal-container" style="max-width: 550px;">
+            <div class="modal-header" style="background: linear-gradient(135deg, #6366f1, #4f46e5); color: white;">
+                <h2><i class="bi bi-lightning-charge-fill"></i> Batch Payment</h2>
+                <button class="modal-close" onclick="closeBatchPaymentModal()" style="color: white;">&times;</button>
+            </div>
+            <div class="modal-body">
+                <!-- Preview Summary -->
+                <div
+                    style="background: linear-gradient(135deg, #dbeafe, #bfdbfe); padding: 16px; border-radius: 12px; margin-bottom: 16px; border: 1px solid #93c5fd;">
+                    <div style="display: flex; justify-content: space-between; align-items: center;">
+                        <div>
+                            <div style="font-size: 14px; color: #1e40af;">Total Payouts</div>
+                            <div style="font-size: 28px; font-weight: 700; color: #1e3a8a;" id="bpPayoutCount">0</div>
+                        </div>
+                        <div style="text-align: right;">
+                            <div style="font-size: 14px; color: #1e40af;">Total Amount</div>
+                            <div style="font-size: 28px; font-weight: 700; color: #1e3a8a;" id="bpTotalAmount">0 QAR
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Garage Breakdown (collapsible) -->
+                <details
+                    style="margin-bottom: 16px; background: var(--bg-secondary); border-radius: 8px; padding: 12px;">
+                    <summary style="cursor: pointer; font-weight: 600; color: var(--text-primary);">
+                        <i class="bi bi-building"></i> Garage Breakdown (<span id="bpGarageCount">0</span> garages)
+                    </summary>
+                    <div id="bpGarageList" style="margin-top: 12px; max-height: 200px; overflow-y: auto;">
+                        <!-- Populated dynamically -->
+                    </div>
+                </details>
+
+                <!-- Reference Input -->
+                <div class="form-group" style="margin-bottom: 15px;">
+                    <label style="font-weight: 600;">Reference Number / Batch ID *</label>
+                    <input type="text" id="bpReference" class="form-control" placeholder="e.g., BATCH-2024-01-27-001"
+                        required style="font-size: 15px; padding: 12px;">
+                    <small style="color: var(--text-secondary);">This reference will be applied to all payouts in this
+                        batch</small>
+                </div>
+
+                <div class="form-group" style="margin-bottom: 15px;">
+                    <label>Notes (Optional)</label>
+                    <textarea id="bpNotes" class="form-control" rows="2"
+                        placeholder="Additional notes for this batch..."></textarea>
+                </div>
+
+                <!-- Hidden fields for batch mode -->
+                <input type="hidden" id="bpMode" value="">
+                <input type="hidden" id="bpGarageId" value="">
+                <input type="hidden" id="bpPayoutIds" value="">
+
+                <div
+                    style="background: #fef3c7; padding: 12px; border-radius: 8px; font-size: 13px; color: #92400e; border: 1px solid #fcd34d;">
+                    <i class="bi bi-exclamation-triangle-fill"></i>
+                    <strong>Warning:</strong> This action will mark all <span id="bpCountWarning">0</span> payouts as
+                    sent.
+                    Each garage will receive a notification.
+                </div>
+            </div>
+            <div class="modal-footer" style="display: flex; justify-content: space-between;">
+                <button class="btn btn-ghost" onclick="closeBatchPaymentModal()">Cancel</button>
+                <button class="btn btn-success" onclick="submitBatchPayment()" id="btnSubmitBatch"
+                    style="padding: 12px 24px;">
+                    <i class="bi bi-send-fill"></i> Send All Payments
                 </button>
             </div>
         </div>
