--- a/public/finance-dashboard.html
+++ b/public/finance-dashboard.html
@@ -490,6 +490,35 @@
                     </div>
                 </div>
 
+                <!-- Tax Invoice Download Toolbar -->
+                <div class="content-card"
+                    style="background: linear-gradient(135deg, #e8f5e9 0%, #f1f8e9 100%); border: 1px solid #4caf50; margin-bottom: 15px;">
+                    <div
+                        style="display: flex; align-items: center; justify-content: space-between; flex-wrap: wrap; gap: 15px;">
+                        <div style="display: flex; align-items: center; gap: 8px;">
+                            <i class="bi bi-file-earmark-text" style="font-size: 20px; color: #2e7d32;"></i>
+                            <div>
+                                <strong style="color: #1b5e20;">Download Tax Invoice</strong>
+                                <div style="font-size: 11px; color: #558b2f;">فاتورة ضريبية - Qatar MOC Compliant</div>
+                            </div>
+                        </div>
+                        <div style="display: flex; gap: 10px; align-items: center; flex-wrap: wrap;">
+                            <select id="invoiceGarageSelect" class="form-control" style="min-width: 180px;">
+                                <option value="">Select Garage</option>
+                            </select>
+                            <input type="date" id="invoiceFromDate" class="form-control" style="width: auto;">
+                            <span>to</span>
+                            <input type="date" id="invoiceToDate" class="form-control" style="width: auto;">
+                            <button class="btn btn-success" onclick="downloadTaxInvoice('pdf')">
+                                <i class="bi bi-file-pdf"></i> PDF
+                            </button>
+                            <button class="btn btn-ghost" onclick="downloadTaxInvoice('html')">
+                                <i class="bi bi-code-slash"></i> HTML
+                            </button>
+                        </div>
+                    </div>
+                </div>
+
                 <div class="content-card">
                     <table class="data-table">
                         <thead>
@@ -896,7 +925,7 @@
     <script src="js/shared/toast.js?v=20260115d"></script>
     <script src="js/shared/modal.js?v=20260115d"></script>
     <script src="js/pagination-utils.js?v=20260115d"></script>
-    <script src="js/finance-dashboard.js?v=20260127a"></script>
+    <script src="js/finance-dashboard.js?v=20260127b"></script>
 </body>
 
 </html>
